--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -1,1 +1,13 @@
-<h1>TEST</h1>
+<h1>AUTHENTICATION</h1>
+{% if user.is_authenticated %}
+<h2>Username: {{ user.username }}</h2>
+<h2>Display Name: {{ user.display_name }}</h2>
+  <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login-page' %}">Login</a>
+  <p>Don't have an account?</p>
+  <a href="{% url 'register' %}">Sign Up</a>
+{% endif %}
+<br/>
+<br/>
