Done, for now...

--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -2,14 +2,6 @@
 {% if user.is_authenticated %}
 <h2>Username: {{ user.username }}</h2>
 <h2>Display Name: {{ user.display_name }}</h2>
+<h2>{{user_model}}</h2>
   <a href="{% url 'logout' %}">Logout</a>
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Login</a>
-  <br>
-  <br>
-  <p>Don't have an account?</p>
-  <a href="{% url 'register' %}">Sign Up</a>
 {% endif %}
-<br/>
-<br/>
