--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -16,3 +16,6 @@
 {% endfor %}
 <button type='submit'>Login</button>
 </form>
+<br>
+  <p>Don't have an account?</p>
+  <a href="{% url 'register' %}">Sign Up</a>
